BJShell misc. enhancements